# drf-api-permissions-postgres

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
Car/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
Car/migrations/: 0001_initial.py
car_project/: settings.py  urls.py
